# Deep-Research-Agent

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  main.py
src/agent/: __init__.py  graph.py  router.py  state.py
src/agent/nodes/: __init__.py  _conditional_node.py  research.py  scope.py  write.py
src/config/: __init__.py  configurations.py
src/ctx/: __init__.py  cache.py  isolate.py  offload.py  reduce.py  retrieve.py
src/model/: __init__.py  base_model.py
src/tools/: __init__.py  web_search.py
src/utils/: token_counter.py
