[project]
name = "deep-research-agent"
version = "0.1.0"
description = " A Scope => Research => Write deep agent with an explicit context engineering layer (offload , reduce, retrieve, isolate, cache), extending langchain-ai/deep-agents-from-scratch."
requires-python= ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain>0.3.0",
  "langchain-anthropic>0.3.0",
  "langchain-community>0.3.0",
  "tavily-python>=0.5.0",
  "python-dotenv>=1.0.0",
  "tiktoken>=0.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "jupyter>=1.0.0"
  "ipykernel>=6.29.0"
]

[build-system]
requires= ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages= ["src"]